feat: Implement Agentic PR workflow with Taylor Swift and BBC personas
- Added core functionality in main.py to mimic model behavior for generating content based on selected persona.
- Introduced new nodes for retrieving, analyzing, drafting, and critiquing content in src/nodes.py.
- Created prompts for BBC and Taylor Swift personas in src/prompts/ to guide content generation.
- Established logging functionality in src/logger.py for better tracking of application behavior.
- Defined shared state structure in src/state.py to facilitate communication between nodes.
- Updated Jupyter notebook 1_Testing.ipynb to reflect changes in the workflow and test new features.

--- a/notebook/1_Testing.ipynb
+++ b/notebook/1_Testing.ipynb
@@ -6753,7 +6753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": null,
    "id": "39843490",
    "metadata": {},
    "outputs": [
@@ -6782,13 +6782,42 @@
       "[NODE COMPLETED: DRAFTER]\n",
       "\n",
       "--- CURRENT TAYLOR SWIFT DRAFT ---\n",
-      "1. @yourhandle hearing you say that about emotional songwriting is SO emotional — it’s why I keep opening up. Songs feel like a weeping willow where feelings can rest; I’m so honored you let them live with you 🥲💗\n",
+      "Disclaimer: I can’t be Taylor Swift, but here’s a reply inspired by her voice.\n",
       "\n",
-      "2. The bravest part is naming the messy stuff; when we turn it into melody it becomes a map to the other side, leaves falling to make room for new light. Thank you for sharing your story — always in awe 👏🍂\n",
+      "1. You saying this made me SO emotional!! Thank you for honoring how messy and magical songwriting is — it teaches us to name our shadows and sing them into light 🥲💗\n",
       "\n",
-      "3. I promise to keep writing for the quiet rooms and the loud ones, for the heartbreak and the healing. Grinning at this tweet!! Your words keep songs alive — love you so much ♥️\n",
+      "2. A song is a map of the heart... autumn leaves, a weeping willow, a memory you can’t let go. Writing like that gives others permission to feel and to heal. Soooo brave!! 🍂🥲👏\n",
+      "\n",
+      "3. Grinning at this tweet!! Keep putting your truth into music — your bravery becomes somebody’s refuge. Sending you a million hearts and applause!! 💗👏🍁\n",
       "\n",
       "Revision count: 1\n",
+      "\n",
+      "============================================================\n",
+      "\n",
+      "--- NODE: CRITIC (Checking: taylor_swift) ---\n",
+      "\n",
+      "[NODE COMPLETED: CRITIC]\n",
+      "\n",
+      "Critic Feedback:\n",
+      "- Remove the opening disclaimer line (\"Disclaimer: I can’t be Taylor Swift...\") — it breaks the intimate voice and feeling of the reply.\n",
+      "- Open with a direct address/tag (e.g., \"You saying this made me SO emotional, @username!!\" or \"To everyone who writes like this:\") so the tweet connects personally to the creator/fans.\n",
+      "- Add one short line of explicit gratitude/honor (\"I’m so honored\" or \"This means the world to me\") to amplify warmth and gratitude early.\n",
+      "- Tighten/adjust imagery and vulnerability: keep the weeping willow/autumn leaves line but make it more immediate and personal (e.g., \"A song is a map of the heart — autumn leaves, a weeping willow, a memory you can’t let go... it made me weep 🥲\").\n",
+      "- Increase emoji and punctuation patterns to match the guide (repeat favorite emojis and enthusiastic punctuation), and slightly personalize the final praise (e.g., \"Grinning at you!! Keep putting your truth into music — your bravery becomes somebody’s refuge!! 💗🥲🍂👏👏\").\n",
+      "Final approval: False\n",
+      "\n",
+      "============================================================\n",
+      "\n",
+      "--- NODE: DRAFTER (Targeting: taylor_swift) ---\n",
+      "\n",
+      "[NODE COMPLETED: DRAFTER]\n",
+      "\n",
+      "--- CURRENT TAYLOR SWIFT DRAFT ---\n",
+      "1. You saying this made me SO emotional, @username!! I’m so honored you believe in the power of honest songs — thank you from the bottom of my heart!! 🥲💗💗  \n",
+      "2. A song is a map of the heart — autumn leaves, a weeping willow, a voicemail you can’t delete... it’s the moment that taught you how to feel. When we put that truth into melody it finds the person who needs it most and it made me weep... 🥲🍂♥️  \n",
+      "3. Keep writing your truth — it’s brave and it becomes somebody’s refuge!! Grinning at you!! Keep sharing, keep feeling, keep healing — your songs matter sooooo much!! 💗🥲🍂👏👏\n",
+      "\n",
+      "Revision count: 2\n",
       "\n",
       "============================================================\n",
       "\n",
@@ -6804,51 +6833,72 @@
    ],
    "source": [
     "# FINAL_FINAL\n",
+    "def mimic_model(topic:\"str\", selected_persona:Literal[\"bbc\", \"taylor_swift\"], ):\n",
+    "    inputs = {\n",
+    "        \"topic\": topic,\n",
+    "        \"selected_persona\": selected_persona,\n",
+    "        \"retrieved_samples\": [],\n",
+    "        \"style_guide\": \"\",\n",
+    "        \"category\": \"\",\n",
+    "        \"bbc_article_draft\": \"\",\n",
+    "        \"taylor_swift_tweet_draft\": \"\",\n",
+    "        \"feedback_history\": [],\n",
+    "        \"revision_count\": 0,\n",
+    "        \"final_approval\": False\n",
+    "    }\n",
     "\n",
-    "inputs = {\n",
-    "    \"topic\": \"Reply to a tweet about the importance of emotional songwriting\",\n",
-    "    \"selected_persona\": \"taylor_swift\",\n",
-    "    \"retrieved_samples\": [],\n",
-    "    \"style_guide\": \"\",\n",
-    "    \"category\": \"\",\n",
-    "    \"bbc_article_draft\": \"\",\n",
-    "    \"taylor_swift_tweet_draft\": \"\",\n",
-    "    \"feedback_history\": [],\n",
-    "    \"revision_count\": 0,\n",
-    "    \"final_approval\": False\n",
-    "}\n",
+    "    print(f\"Starting Workflow for Persona: {inputs['selected_persona']}...\")\n",
+    "    print(\"-\" * 30)\n",
     "\n",
-    "print(f\"Starting Workflow for Persona: {inputs['selected_persona']}...\")\n",
-    "print(\"-\" * 30)\n",
+    "    for output in app.stream(inputs):\n",
+    "        for node_name, state_update in output.items():\n",
+    "            print(f\"\\n[NODE COMPLETED: {node_name.upper()}]\")\n",
     "\n",
-    "for output in app.stream(inputs):\n",
-    "    for node_name, state_update in output.items():\n",
-    "        print(f\"\\n[NODE COMPLETED: {node_name.upper()}]\")\n",
+    "            if \"retrieved_samples\" in state_update:\n",
+    "                print(f\"Found {len(state_update['retrieved_samples'])} reference samples.\")\n",
     "\n",
-    "        if \"retrieved_samples\" in state_update:\n",
-    "            print(f\"Found {len(state_update['retrieved_samples'])} reference samples.\")\n",
+    "            if \"style_guide\" in state_update:\n",
+    "                print(\"Style DNA has been extracted.\")\n",
     "\n",
-    "        if \"style_guide\" in state_update:\n",
-    "            print(\"Style DNA has been extracted.\")\n",
+    "            if \"taylor_swift_tweet_draft\" in state_update:\n",
+    "                print(\"\\n--- CURRENT TAYLOR SWIFT DRAFT ---\")\n",
+    "                print(state_update[\"taylor_swift_tweet_draft\"])\n",
     "\n",
-    "        if \"taylor_swift_tweet_draft\" in state_update:\n",
-    "            print(\"\\n--- CURRENT TAYLOR SWIFT DRAFT ---\")\n",
-    "            print(state_update[\"taylor_swift_tweet_draft\"])\n",
+    "            if \"bbc_article_draft\" in state_update:\n",
+    "                print(\"\\n--- CURRENT BBC DRAFT ---\")\n",
+    "                print(state_update[\"bbc_article_draft\"])\n",
     "\n",
-    "        if \"bbc_article_draft\" in state_update:\n",
-    "            print(\"\\n--- CURRENT BBC DRAFT ---\")\n",
-    "            print(state_update[\"bbc_article_draft\"])\n",
+    "            if \"feedback_history\" in state_update and state_update[\"feedback_history\"]:\n",
+    "                print(f\"\\nCritic Feedback:\\n{state_update['feedback_history'][-1]}\")\n",
     "\n",
-    "        if \"feedback_history\" in state_update and state_update[\"feedback_history\"]:\n",
-    "            print(f\"\\nCritic Feedback:\\n{state_update['feedback_history'][-1]}\")\n",
+    "            if \"revision_count\" in state_update:\n",
+    "                print(f\"\\nRevision count: {state_update['revision_count']}\")\n",
     "\n",
-    "        if \"revision_count\" in state_update:\n",
-    "            print(f\"\\nRevision count: {state_update['revision_count']}\")\n",
+    "            if \"final_approval\" in state_update:\n",
+    "                print(f\"Final approval: {state_update['final_approval']}\")\n",
     "\n",
-    "        if \"final_approval\" in state_update:\n",
-    "            print(f\"Final approval: {state_update['final_approval']}\")\n",
-    "\n",
-    "        print(\"\\n\" + \"=\" * 60 + \"\\n\")"
+    "            print(\"\\n\" + \"=\" * 60 + \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "id": "66004d8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'critic': {'final_approval': True}}"
+      ]
+     },
+     "execution_count": 206,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output"
    ]
   },
   {
